--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Amazon</title>
+<title>"Online Shopping site in India: Shop Online for Mobiles, Books, Watches, Shoes and More - Amazon.in"</title>
 </head>
 <body>
 <div id="root">
